--- a/styles/community.css
+++ b/styles/community.css
@@ -6,7 +6,6 @@
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     height: 100px;
-    /* height: 130px; *--> AI page */
     box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961);
 }
 
@@ -154,7 +153,6 @@
     bottom: 80px;
     right: 15px;
     z-index: 99;
-    /* Make sure it does not overlap */
     border: none;
     outline: none;
     background-color: #726d69;
@@ -192,7 +190,7 @@
     text-align: center;
     opacity: 0;
     transform: scale(0.9);
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; /* Transition effect for modal content */
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; 
 }
 
 .modal-content p {
