--- a/styles/profile.css
+++ b/styles/profile.css
@@ -4,7 +4,6 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    /* width: 100vw; */
 }
 
 .header {
@@ -15,7 +14,6 @@ body {
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     height : 100px;
-    /* height: 130px; *--> AI page */
     box-shadow: 0 2px 4px rgba(225, 97, 18, 0.961);
 }
 
@@ -81,7 +79,6 @@ body {
 }
 
 a {
-    /* Inherit color from parent element */
     color: inherit;
 }
 
@@ -112,4 +109,65 @@ a {
     margin-top: 20px;
     font-size: 12px;
     color: #aaa;
+}
+
+/* Modal CSS */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 60px;
+}
+
+.modal.show {
+    display: block;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    text-align: center;
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.modal-content p {
+    font-size: 18px;
+}
+
+.modal-content.show {
+    opacity: 1;
+    transform: scale(1);
+}
+
+#confirmBtn, #cancelBtn {
+    font-size: 24px;
+    padding: 15px 30px;
+    margin: 20px auto; 
+    cursor: pointer;
+    display: block; 
+    width: 80%;
+    max-width: 300px; 
+}
+
+#confirmBtn {
+    background-color: #f44336;
+    color: white;
+    border: none;
+}
+
+#cancelBtn {
+    background-color: #efefef;
+    color: rgb(0, 0, 0);
+    border: none;
 }
