--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <div class="px-4 py-5 my-5 text-center">
   <footer>
-    <a href="index.html">
+    <a href="/community">
       <input type="image" class="footerButton" src="../../img/23-user-group.svg">
     </a>
     <a href="main">
