--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -4,65 +4,146 @@
     </head>
 
     <body>
-        <!-- Chatbot -->
-        <form action="/aichat-home" method="get" class="">
-            <button type="submit" class="index-btn ">ChatBot</button>
-          </form>
-          <% if(boostActive > 0) { %>
-            <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
-          <% } %>
-        <!--Contents in the body tag-->
-        <div class="fitTaskImage">
-            <img class="title" src="/img/FitnessLogo.png" alt="logo">
+
+        <div>
+            <form action="/shop" method="get">
+                <button type="submit" class="rerolls">
+                    <img class="rerollImg" src="/img/reroll.png">
+                    <span class="reroll">: <%=rerolls%>
+                    </span>
+                </button>
+            </form>
         </div>
+
+        <!-- Chatbot -->
+        <div class="Chatter">
+            <form action="/aichat-home" method="get">
+                <button type="submit" class="btner"><img src="/img/chatBotImg.png"></button>
+            </form>
+        </div>
+        
+        <!--Contents in the body tag-->
+        <img class="title" src="/img/FitnessLogo.png" alt="logo">
+        
+
         <div class="container taskCards">
-            <h1>Points: <%= points %>
-            </h1>
-            <div class="card">
+
+            <% if (noRerolls) { %>
+                <h1 class="error">Lacking Rerolls</h1>
+                <% } %>
+                    <h1>Points: <%= points %>
+                    </h1>
+                    <div class="card" id="taskCard1">
+                        <div class="card-body" id="taskBody1">
+                            <%= task1 %>
+                        </div>
+                        <span>
+                            <form method="post" action="/addPointFit" style="display: inline" id="doneForm1">
+                                <input type="text" name="task" value="<%= task1 %>" hidden>
+                                <button class="btn btnz btn-primary float-right" type="submit" id="doneButton1">Done</button>
+                            </form>
+                            <form method="post" action="/rerollFit" style="display: inline">
+                                <input type="text" name="number" value="1" hidden>
+                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
+                            </form>
+                        </span>
+                    </div>
+                    
+                    <div class="card" id="taskCard2">
+                        <div class="card-body" id="taskBody2">
+                            <%= task2 %>
+                        </div>
+                        <span>
+                            <form method="post" action="/addPointFit" style="display: inline" id="doneForm2">
+                                <input type="text" name="task" value="<%= task2 %>" hidden>
+                                <button class="btn btnz btn-primary float-right" type="submit" id="doneButton2">Done</button>
+                            </form>
+                            <form method="post" action="/rerollFit" style="display: inline">
+                                <input type="text" name="number" value="2" hidden>
+                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
+                            </form>
+                        </span>
+                    </div>
+                    
+                    <div class="card" id="taskCard3">
+                        <div class="card-body" id="taskBody3">
+                            <%= task3 %>
+                        </div>
+                        <span>
+                            <form method="post" action="/addPointFit" style="display: inline" id="doneForm3">
+                                <input type="text" name="task" value="<%= task3 %>" hidden>
+                                <button class="btn btnz btn-primary float-right" type="submit" id="doneButton3">Done</button>
+                            </form>
+                            <form method="post" action="/rerollFit" style="display: inline">
+                                <input type="text" name="number" value="3" hidden>
+                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
+                            </form>
+                        </span>
+                    </div>
+
+        </div>
+        <div>
+            <% if(boostActive > 0) { %>
+                <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
+              <% } %>
+            </div>
+            <script src="../scripts/fitTasks.js"></script>
+                
+        <%- include("templates/footer") %>
+
+        <!-- <div class="card-container">
+            <div class="card" id="taskCard1">
                 <div class="card-body">
                     <%= task1 %>
                 </div>
                 <span>
-                    <form method="post" action="/addPointFit" style="display: inline">
+                    <form method="post" action="/addPointFit" style="display: inline" class="doneForm">
                         <input type="text" name="task" value="<%= task1 %>" hidden>
-                        <button class="btn custom-btn float-right" type="submit">Done</button>
+                        <button class="btn btnz btn-primary float-right doneButton" type="button">Done</button>
                     </form>
                     <form method="post" action="/rerollFit" style="display: inline">
                         <input type="text" name="number" value="1" hidden>
-                        <button class="btn btn-secondary float-right" type="submit">Reroll</button>
+                        <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
                     </form>
                 </span>
             </div>
-            <div class="card">
+            <div class="grey-box" id="greyBox1"></div>
+        </div>
+    
+        <div class="card-container">
+            <div class="card" id="taskCard2">
                 <div class="card-body">
                     <%= task2 %>
                 </div>
                 <span>
-                    <form method="post" action="/addPointFit" style="display: inline">
+                    <form method="post" action="/addPointFit" style="display: inline" class="doneForm">
                         <input type="text" name="task" value="<%= task2 %>" hidden>
-                        <button class="btn custom-btn float-right" type="submit">Done</button>
+                        <button class="btn btnz btn-primary float-right doneButton" type="button">Done</button>
                     </form>
                     <form method="post" action="/rerollFit" style="display: inline">
                         <input type="text" name="number" value="2" hidden>
-                        <button class="btn btn-secondary float-right" type="submit">Reroll</button>
+                        <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
                     </form>
                 </span>
             </div>
-            <div class="card">
+            <div class="grey-box" id="greyBox1"></div>
+        </div>
+
+        <div class="card-container">
+            <div class="card" id="taskCard3">
                 <div class="card-body">
                     <%= task3 %>
                 </div>
                 <span>
-                    <form method="post" action="/addPointFit" style="display: inline">
+                    <form method="post" action="/addPointFit" style="display: inline" class="doneForm">
                         <input type="text" name="task" value="<%= task3 %>" hidden>
-                        <button class="btn custom-btn float-right" type="submit">Done</button>
+                        <button class="btn btnz btn-primary float-right doneButton" type="button">Done</button>
                     </form>
                     <form method="post" action="/rerollFit" style="display: inline">
                         <input type="text" name="number" value="3" hidden>
-                        <button class="btn btn-secondary float-right" type="submit">Reroll</button>
+                        <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
                     </form>
                 </span>
             </div>
-
-        </div>
-        <%- include("templates/taskFooter") %>
+            <div class="grey-box" id="greyBox1"></div>
+        </div> -->
