--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,30 @@
 <%- include("templates/header") %>
-</head>
+	</head>
 
-  <div class="title" class="center">
-    <img src="/img/Logo.png" alt="logo" width="250" height="250">
-  </div>
+	<div class="title" class="center">
+		<img src="/img/Logo.png" alt="logo" width="250" height="250">
+	</div>
 
-  <div class="login bg-light">
-    <br>
-    <form action="/login" method="POST" class="index-form center">
-      <h1>Login</h1>
-      <input type="email" name="email" placeholder="Email">
-      <input type="password" name="password" placeholder="Password">
-      <button type="submit" class="index-btn">Login</button>
-    </form> 
-    <br>
-    <form class="index-form center">
-        <a href="/reset-email">Reset password</a>
-    </form>
-  </div>
+	<div class="login bg-light">
+		<br>
 
-  <%- include("templates/end") %>
+		<% if (input==1) { %>
+			<div class="alert alert-danger" role="alert">
+				<h1>Invalid Email or Password</h1>
+			</div>
+			<% } %>
+
+				<form action="/login" method="POST" class="index-form center">
+					<h1>Login</h1>
+
+					<input type="email" name="email" placeholder="Email">
+					<input type="password" name="password" placeholder="Password">
+					<button type="submit" class="index-btn">Login</button>
+				</form>
+				<br>
+				<form class="index-form center">
+					<a href="/reset-email">Reset password</a>
+				</form>
+	</div>
+	<%- include("templates/easteregg") %>
+		<%- include("templates/end") %>
