--- a/views/changeEmail.ejs
+++ b/views/changeEmail.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/header") %>
-</head>
+    </head>
 
     <div class="title" class="center">
         <img src="/img/Logo.png" alt="logo" width="250" height="250">
@@ -7,11 +7,16 @@
 
     <div class="login bg-light">
         <br>
-        <form action="/changeEmail" method="POST" class="index-form center">
-            <h1>New Email</h1>
-            <input type="email" name="email" placeholder="Email" required>
-            <button type="submit" class="index-btn">Confirm</button>
-        </form>
-        <br>
+        <% if (issue==true) { %>
+            <div class="alert alert-danger" role="alert">
+                <h1>Invalid Email</h1>
+            </div>
+            <% } %>
+                <form action="/changeEmail" method="POST" class="index-form center">
+                    <h1>New Email</h1>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <button type="submit" class="index-btn">Confirm</button>
+                </form>
+                <br>
     </div>
-<%- include("templates/end") %>
+    <%- include("templates/end") %>
