--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/header") %>
-</head>
+    </head>
 
     <div class="title" class="center">
         <img src="/img/Logo.png" alt="logo" width="250" height="250">
@@ -7,11 +7,17 @@
 
     <div class="login bg-light">
         <br>
-        <form action="/changePassword" method="POST" class="index-form center">
-            <h1>New Password</h1>
-            <input type="password" name="password" placeholder="Password">
-            <button type="submit" class="index-btn">Confirm</button>
-        </form>
-        <br>
+        <% if (issue==true) { %>
+            <div class="alert alert-danger" role="alert">
+                <h1>Invalid Password</h1>
+            </div>
+            <% } %>
+                <form action="/changePassword" method="POST" class="index-form center">
+                    <h1>New Password</h1>
+                    <h5>Must be between 8-20 characters</h5>
+                    <input type="password" name="password" placeholder="Password">
+                    <button type="submit" class="index-btn">Confirm</button>
+                </form>
+                <br>
     </div>
-<%- include("templates/end") %>
+    <%- include("templates/end") %>
