--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -32,5 +32,4 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="../../styles/style.css">
-  <link rel="stylesheet" type="text/css" href="../../styles/main.css" text="">
+  <link rel="stylesheet" type="text/css" href="/styles/main.css" text="">
