--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -107,7 +107,7 @@
     <!-- going back function -->
     <script>
         function goBack() {
-            window.history.back();
+            window.location.href = 'main';
         }
     </script>
 
